Fix text descender cropping

--- a/styl/modal.styl
+++ b/styl/modal.styl
@@ -30,13 +30,12 @@
   .modal-top-stripe
     position relative
     height 4em
-    line-height 1em
     padding 1.5em 5.5em
 
     .text
-      line-height 1
+      line-height 1.4
       position relative
-      top .125em
+      top -.0625em
       font-weight 500
       color darkerGray
       overflow ellipsis
